.conflict-side-0/kubernetes/apps/media/emby/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`emby.${DOMAIN}`)
      kind: Rule
      services:
        - name: emby
          port: 8096
  tls: {}
